[gd_scene load_steps=9 format=3 uid="uid://test_bot_on_map"]

[ext_resource type="Script" path="res://scripts/tests/test_bot_on_map.gd" id="1_script"]
[ext_resource type="Script" uid="uid://dg2obkxmhp4v2" path="res://scripts/tests/orbit_camera.gd" id="2_orbit_camera"]
[ext_resource type="PackedScene" path="res://assets/characters/vanguard/vanguard.glb" id="3_character"]
[ext_resource type="Script" path="res://scripts/characters/character_base.gd" id="5_character_base"]
[ext_resource type="PackedScene" path="res://resources/maps/map.glb" id="4_map"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.4, 0.5, 0.6, 1)
ambient_light_source = 2
ambient_light_color = Color(0.7, 0.7, 0.75, 1)
ambient_light_energy = 0.6

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(100, 0.2, 100)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_char"]
radius = 0.3
height = 1.8

[node name="TestBotOnMap" type="Node3D"]
script = ExtResource("1_script")

[node name="Map" parent="." instance=ExtResource("4_map")]

[node name="Bot" type="CharacterBody3D" parent="." groups=["bot"]]
script = ExtResource("5_character_base")
collision_layer = 1
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0)
shape = SubResource("CapsuleShape3D_char")

[node name="CharacterModel" parent="Bot" instance=ExtResource("3_character")]

[node name="OrbitCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 8)
fov = 50.0
script = ExtResource("2_orbit_camera")
distance = 10.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 10, 20, 10)
shadow_enabled = true
shadow_bias = 0.03
shadow_normal_bias = 1.5
directional_shadow_max_distance = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="FloorCollision" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloorCollision"]
shape = SubResource("BoxShape3D_floor")
